--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-after-navbar" id="msg-box6-3" data-bg-video="https://www.youtube.com/watch?v=uNCr7NdOJgw" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Builder</a></section><section class="mbr-section mbr-after-navbar" id="msg-box6-3" data-bg-video="https://www.youtube.com/watch?v=uNCr7NdOJgw" style="padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -129,7 +129,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-parallax-background" id="msg-box8-a" style="background-image: url(assets/images/desert0.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section article mbr-parallax-background" id="msg-box8-a" style="background-image: url(assets/images/desert1.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -183,7 +183,7 @@
                     <div class="card-img"><a href="https://mobirise.com" class="mbri-touch mbr-iconfont mbr-iconfont-features2"></a></div>
                     <div class="card-block">
                         <h4 class="card-title"></h4>
-                        <h5 class="card-subtitle">Главный вывод и результат:<div>Ваш МЛМ-бизнес теперь работает автоматически и приносит вам гораздо БОЛЬШЕ денег при том, что теперь вы тратите на него гораздо МЕНЬШЕ времени!</div><div><br><div><br></div></div></h5>
+                        <h5 class="card-subtitle">3) Главный вывод и результат:<div>Ваш МЛМ-бизнес теперь работает автоматически и приносит вам гораздо БОЛЬШЕ денег при том, что теперь вы тратите на него гораздо МЕНЬШЕ времени!</div><div><br><div><br></div></div></h5>
                         <p class="card-text"></p>
                         <div class="card-btn"><a href="https://glopart.ru/buy/177175" class="btn btn-primary" target="_blank">ДЕЙСТВУЙ</a></div>
                     </div>
@@ -196,7 +196,7 @@
                     <div class="card-img"><a href="https://mobirise.com" class="mbri-rocket mbr-iconfont mbr-iconfont-features2"></a></div>
                     <div class="card-block">
                         <h4 class="card-title"></h4>
-                        <h5 class="card-subtitle">&nbsp;3) В итоге: <br>Вы начнете привлекать новых партнеров\клиентов в ваш МЛМ-бизнес на полном АВТОПИЛОТЕ!!!</h5>
+                        <h5 class="card-subtitle">&nbsp;4) В итоге: <br>Вы начнете привлекать новых партнеров\клиентов в ваш МЛМ-бизнес на полном АВТОПИЛОТЕ!!!</h5>
                         <p class="card-text"></p>
                         <div class="card-btn"><a href="https://glopart.ru/buy/177175" class="btn btn-primary" target="_blank">ДЕЙСТВУЙ</a></div>
                     </div>
@@ -259,7 +259,7 @@
                     <div class="card-block">
                         <h4 class="card-title"></h4>
                         
-                        <p class="card-text">5) Вы получите подробные инструкции по настройке необходимых технических сервисов (ничего выдумывать не потребуется, просто делаете 1 в 1 по нашей пошаговой инструкции и все)&nbsp;Сколько еще раз ЭТО написать, чтобы все-все-все и всё-всё-всё поняли?</p>
+                        <p class="card-text">4) Вы получите подробные инструкции по настройке необходимых технических сервисов (ничего выдумывать не потребуется, просто делаете 1 в 1 по нашей пошаговой инструкции и все)&nbsp;Сколько еще раз ЭТО написать, чтобы все-все-все и всё-всё-всё поняли?</p>
                         <div class="card-btn"><a href="https://glopart.ru/buy/177175" class="btn btn-primary" target="_blank">ДЕЙСТВУЙ</a></div>
                     </div>
                 </div>
@@ -590,7 +590,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="ЕСТЬ ВОПРОСЫ? &amp;nbsp;НАПИШИТЕ НАМ:">
 
-                        <input type="hidden" value="ZH0Y1fVtz2Mt6z1cLmKZ8CY+70IkOyc4QeGhSR4fh4Qa+ifjDqboo7aqOxMaZe2BAwll6WvvAyJALWZTdNNWrO2vmtXOcJeG41q+/osbOmbW4dJSYKH3mz7xKaN6a4Cj" data-form-email="true">
+                        <input type="hidden" value="GOFaegsG+B976/oM61oh3gPULk0gVmZkTwBCn3rCxUH2n3Lv4ts26eaKuPTXp9j8ERoNPfXhO3695uEHLsyVkHBTw3MVFudGQOhtPuzs186N0M4PGy6WoM8Cf6i7L6MQ" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
