create github pages

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Builder</a></section><section class="mbr-section mbr-after-navbar" id="msg-box6-3" data-bg-video="https://www.youtube.com/watch?v=uNCr7NdOJgw" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section mbr-after-navbar" id="msg-box6-3" data-bg-video="https://www.youtube.com/watch?v=uNCr7NdOJgw" style="padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -78,7 +78,7 @@
                   <h3 class="mbr-section-title display-2"></h3>
                   <div class="lead">
 
-                    <p><strong>ОБУЧАЮ УНИКАЛЬНОЙ МЕТОДИКЕ ПОИСКА И ПРИВЛЕЧЕНИЯ ПАРТНЕРОВ В РАЗЛИЧНЫЕ ПРОЕКТЫ И СЕТЕВЫЕ КОМПАНИИ НА ПОЛНОМ АВТОМАТЕ</strong><br><strong><br></strong>ЧТО ВЫ ПОЛУЧИТЕ В МОЕЙ КОМАНДЕ:<br>— набор сервисов для поиска партнеров;                                                                           — набор программ для привлечения партнеров;                                                                   — моё личное обучение, а мне есть чему вас научить; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; — онлайн поддержку с моей стороны с 9.00 до 21.00; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;—  помощь в работе с командой и с её развитием;<br>— комплект полностью готовых шаблонов (под ключ) для создания автоматической воронки в млм-бизнесе по принципу «Скопировал — Вставил — Заработал» или &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;— Просто возьмите все готовое, затем примените это за 25 минут, и начните привлекать новых партнеров\клиентов на автопилоте уже сегодня! Без головной боли о технических заморочках!<br></p>
+                    <p></p><p><strong>ОБУЧАЮ УНИКАЛЬНОЙ МЕТОДИКЕ ПОИСКА И ПРИВЛЕЧЕНИЯ ПАРТНЕРОВ В РАЗЛИЧНЫЕ ПРОЕКТЫ И СЕТЕВЫЕ КОМПАНИИ НА ПОЛНОМ АВТОМАТЕ</strong><br><strong><br></strong>ЧТО ВЫ ПОЛУЧИТЕ В МОЕЙ КОМАНДЕ:&nbsp;<br>набор сервисов для поиска партнеров;                                                                           — набор программ для привлечения партнеров;                                                                   — моё личное обучение, а мне есть чему вас научить;&nbsp;- онлайн поддержку с моей стороны с 9.00 до 21.00; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; —  помощь в работе с командой и с её развитием;&nbsp;— комплект полностью готовых шаблонов (под ключ) для создания автоматической воронки в млм-бизнесе по принципу «Скопировал — Вставил — Заработал» или — просто возьмите все готовое, затем примените это за 25 минут, и начните привлекать новых партнеров\клиентов на автопилоте уже сегодня! Без головной боли о технических заморочках!<br></p><p></p>
 
                   </div>
 
@@ -129,7 +129,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-parallax-background" id="msg-box8-a" style="background-image: url(assets/images/desert1.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section article mbr-parallax-background" id="msg-box8-a" style="background-image: url(assets/images/desert2.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -349,7 +349,7 @@
 
                         <div class="mbr-table-cell col-md-5 content-size text-xs-center text-md-right">
 
-                            <h3 class="mbr-section-title display-2">ГАРАНТИЯ В ПОИСКЕ ПАРТНЁРОВ<br><div style="text-align: right;"><br></div><div>ГАРАНТИЯ ЗАРАБОТКА ОТ 72 000 РУБЛЕЙ<span style="font-size: 20px; text-align: left; line-height: 1.1;">В ПЕРВЫЙ ЖЕ </span></div><div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="font-size: 20px; text-align: left; line-height: 1.1;">МЕСЯЦ ДЛЯ КАЖДОГО ПАРТНЕРА.</span></div><div>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;ОБУЧАЮ УНИКАЛЬНОЙ МЕТОДИКЕ ПОИСКА И</div><div>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;ПРИВЛЕЧЕНИЯ ПАРТНЕРОВ В РАЗЛИЧНЫЕ</div><div>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;ПРОЕКТЫ И СЕТЕВЫЕ КОМПАНИИ НА ПОЛНОМ</div><div>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; АВТОМАТЕ.</div><div><div><div style="text-align: right;"><br></div></div></div></h3>
+                            <h3 class="mbr-section-title display-2">ГАРАНТИЯ В ПОИСКЕ ПАРТНЁРОВ<br><div style="text-align: right;"><br></div><div>ГАРАНТИЯ ЗАРАБОТКА ОТ 72 000 РУБЛЕЙ<span style="font-size: 20px; text-align: left; line-height: 1.1;">В ПЕРВЫЙ ЖЕ&nbsp;</span><span style="text-align: left; font-size: 20px; line-height: 1.1;">МЕСЯЦ ДЛЯ КАЖДОГО ПАРТНЕРА. &nbsp;ОБУЧАЮ &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</span><span style="text-align: left; font-size: 20px; line-height: 1.1;">УНИКАЛЬНОЙ МЕТОДИКЕ ПОИСКА И&nbsp;</span><span style="text-align: left; font-size: 20px; line-height: 1.1;">ПРИВЛЕЧЕНИЯ ПАРТНЕРОВ В РАЗЛИЧНЫЕ&nbsp;</span><span style="text-align: left; font-size: 20px; line-height: 1.1;">ПРОЕКТЫ И СЕТЕВЫЕ КОМПАНИИ НА ПОЛНОМ&nbsp;</span><span style="text-align: left; font-size: 20px; line-height: 1.1;">АВТОМАТЕ.</span></div><div><div><div style="text-align: right;"><br></div></div></div></h3>
 
                             <div class="mbr-section-text">
                                 
@@ -590,7 +590,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="ЕСТЬ ВОПРОСЫ? &amp;nbsp;НАПИШИТЕ НАМ:">
 
-                        <input type="hidden" value="GOFaegsG+B976/oM61oh3gPULk0gVmZkTwBCn3rCxUH2n3Lv4ts26eaKuPTXp9j8ERoNPfXhO3695uEHLsyVkHBTw3MVFudGQOhtPuzs186N0M4PGy6WoM8Cf6i7L6MQ" data-form-email="true">
+                        <input type="hidden" value="Io8NBfY0aB0KUKzWdkrnD3PxLrp37S1Vq+S+xaLfZ2UCzm9HVnGYU37tZecxUPC4WWVoxEMMoBAJvtgonBBpeEEAMybrdqfZW+7a5o2IUAShYB5LbEn8xlTBTBTADqby" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -639,7 +639,7 @@
                 <div><img src="assets/images/logo.png"></div>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p></p><p><strong>Address &nbsp; </strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong>&nbsp;</strong><span style="font-size: 0.875rem; line-height: 1.5;">г. Омск &nbsp;ул. Лермонтова 63</span></p><p></p>
+                <p></p><p><strong>Address &nbsp; </strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <span style="font-size: 0.875rem; line-height: 1.5;">г. Омск &nbsp;ул. Лермонтова 63</span></p><p></p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p><strong>Contacts</strong><br>
