--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-after-navbar" id="msg-box6-3" data-bg-video="https://www.youtube.com/watch?v=uNCr7NdOJgw" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-after-navbar" id="msg-box6-3" data-bg-video="https://www.youtube.com/watch?v=uNCr7NdOJgw" style="padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -185,7 +185,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="г. &amp;nbsp; Омск &amp;nbsp; &amp;nbsp; ул. &amp;nbsp; Лермонтова &amp;nbsp; 63 &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; т. &amp;nbsp; +79620308500">
-                        <input type="hidden" value="oNW/Rn4fVvN90AnRr37m92XPvPJxjMGey6pNnOvqQbhFpCV82bWezUCPn0uMARMHuFSq6jQxgCef54ritixXLL1yhdO2iARNx7mWtiTQsa7UlkJhtczYivrDAJQ9h5gp" data-form-email="true">
+                        <input type="hidden" value="OTdXNyYlM4dyQYsXYl8vnpefZjpYbrvrQOKbatSyUcgc6TuuG0CCi3v2u8Azfd3NBABmMQpdc70Tm6bwZTnCcQW9LM+6MtAMQOtqryTP2l04/46g5pWRFsXnwHsnPq/s" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Email Address..." id="form2-14-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">ОБРАЩАЙТЕСЬ</button></span>
@@ -487,7 +487,7 @@
 
                     <h1 class="mbr-section-title display-1">И ГЛАВНОЕ,  что получите шаблоны сайтов и&nbsp;<div>инструкцию по созданию АВТОРАССЫЛКИ, но в&nbsp;</div><div>дальнейшем получите инструкции как ЗАПУСТИТЬ ТРАФИК НА САЙТЫ и ПОЛУЧИТЬ&nbsp;</div><div>ОШЕЛОМЛЯЮЩУЮ КОНВЕРСИЮ,  поэтому не&nbsp;</div><div>теряйте драгоценное время, а ДЕЙСТВУЙТЕ</div><div><br><br></div></h1>
                     <p class="mbr-section-lead lead"></p>
-                    <div class="mbr-section-btn">  <a class="btn btn-lg btn-primary" href="https://glopart.ru/buy/177175" target="_blank"><span class="mbri-cart-add mbr-iconfont mbr-iconfont-btn"></span>ДЕЙСТВУЙТЕ</a></div>
+                    <div class="mbr-section-btn">  <a class="btn btn-lg btn-primary" href="https://glopart.ru/buy/177175" target="_blank">ДЕЙСТВУЙТЕ</a></div>
                 </div>
             </div>
         </div>
@@ -623,7 +623,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="ЕСТЬ ВОПРОСЫ? &amp;nbsp;НАПИШИТЕ НАМ">
 
-                        <input type="hidden" value="vX7wsAIgF84750iIZDYyhz/zcsF3LCcYioudsR0mEbvRzlUIfcMdPSRy1m8Mp7x+AngjoOpq7UpqD0YCg2pcm7+RLlkcY3U0J/FtbwT1me06tqnbJY26NLiuTjKZ649a" data-form-email="true">
+                        <input type="hidden" value="uMWiepbtrozsc39FrONoccRZTB/FTmfrIxR10ukxft/pMvuiqabKPd8TICtx1Nu2X90JzMDfo4BtgdAObSoI7r5i9wRSlfUL88O88ZzX5KbENxMDcjSiLBjZpefoGuSK" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
